syntax = "proto3";

package fintekkers.requests.valuation;

import "fintekkers/models/security/security.proto";
import "fintekkers/models/position/position.proto";
import "fintekkers/models/price/price.proto";
import "fintekkers/models/util/local_timestamp.proto";

import "fintekkers/requests/util/operation.proto";
import "fintekkers/models/position/measure.proto";

option java_multiple_files = true;

option java_outer_classname = "ValuationRequestProtos";

// Developer notes. This will need some re-organization once we start thinking through
// varied valuations (e.g. value over a time range, value multiple securities in the same
// request/etc. For now, the caller will need to make individual requests.
message ValuationRequestProto {
  string object_class = 1;
  string version = 2;

  //Only supports GET, since there is no backing store, so CREATE isn't relevant. SEARCH isn't relevant either.
  //VALIDATE could be implemented later, e.g. if the caller wants to check their inputs are correct.
  fintekkers.requests.util.RequestOperationTypeProto operation_type = 10;

  //The list of measures to be generated by this request, e.g. MARKET_VALUE, CURRENT_YIELD, etc.
  repeated fintekkers.models.position.MeasureProto measures = 30;

  //The full security object for which we are going to run the valuation
  fintekkers.models.security.SecurityProto security_input = 20;

  //The positions we are going to value.
  fintekkers.models.position.PositionProto position_input= 21;

  //The price we are going to use for the valuation.
  fintekkers.models.price.PriceProto price_input = 22;

  //The asof datetime for the valuation.
  fintekkers.models.util.LocalTimestampProto asof_datetime = 23;
}


